@@ -55,8 +55,7 @@
               maximized python: state == 'maximized';
               portlet_url portlet/getURL;
               base_url python: request.get('cpsskins_base_url')">
-  <div class="title buttons"
-   tal:condition="python: str(user) != 'Anonymous User'">
+  <div class="title buttons">
     <a tal:condition="not:maximized"
      tal:attributes="href string:${portlet_url}/cpsskins_setPortletState?state=maximized">
      <img src="" width="16" height="16" alt=""
@@ -82,8 +81,7 @@
               portlet_url portlet/getURL;
               base_url python: request.get('cpsskins_base_url')">
   <tal:block tal:condition="python: state != 'closed'">
-    <div class="title buttons"
-     tal:condition="python: str(user) != 'Anonymous User'">
+    <div class="title buttons">
       <a tal:condition="python: state != 'closed'"
       tal:attributes="href string:${portlet_url}/cpsskins_setPortletState?state=closed">
        <img src="" width="16" height="16" alt="" 
@@ -120,8 +118,7 @@
               portlet_url portlet/getURL;
               base_url python: request.get('cpsskins_base_url')">
   <tal:block tal:condition="python: state != 'closed'">
-    <div class="title buttons"
-      tal:condition="python: str(user) != 'Anonymous User'">
+    <div class="title buttons">
       <a tal:condition="python: state != 'closed'"
       tal:attributes="href string:${portlet_url}/cpsskins_setPortletState?state=closed">
        <img src="" width="16" height="16" alt="" 
